<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LHUserSales">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/usersales"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/allnewsales"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/salesdesc"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/saleing"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/left_flag"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


        <RelativeLayout
            android:id="@+id/relativeLayout11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout10"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/divider7">

            <TextView
                android:id="@+id/presaletxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="待发货"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/presalenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/presaletxt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout11"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout12"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout11"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout11">

            <TextView
                android:id="@+id/saleingtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="已发货"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/saleingnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saleingtxt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout10"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout10"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout10">

            <TextView
                android:id="@+id/saledtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLength="4"
                android:maxLines="2"
                android:text="交易成功(待提醒)"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/salednum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saledtxt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout12"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout12"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout12">

            <TextView
                android:id="@+id/saledfailtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="交易失败"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/saledfailnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saledfailtxt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout11">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="闲置出售"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="闲置出售"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout16"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/song_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="待邮寄"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/song_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_txt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout15"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/shenghe_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="待审核"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/shenghe_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shenghe_txt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayout18"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout16"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/queren_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="待确认"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/queren_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/queren_txt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayout18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/relativeLayout17"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/finish_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="2"
                android:text="已完成"
                android:textColor="@color/design_default_color_on_secondary" />

            <TextView
                android:id="@+id/finish_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/finish_txt"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/design_default_color_on_secondary" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>